Updated text to eliminate any reference to Uluru.

--- a/index.html
+++ b/index.html
@@ -44,22 +44,15 @@
           infowindow.setContent('<div id="content">'+
             '<div id="siteNotice">'+
             '</div>'+
-            '<h1 id="firstHeading" class="firstHeading">Uluru</h1>'+
+            '<h1 id="firstHeading" class="firstHeading">Charging Station</h1>'+
             '<div id="bodyContent">'+
-            '<p><b>Uluru</b>, also referred to as <b>Ayers Rock</b>, is a large ' +
-            'sandstone rock formation in the southern part of the '+
-            'Northern Territory, central Australia. It lies 335&#160;km (208&#160;mi) '+
-            'south west of the nearest large town, Alice Springs; 450&#160;km '+
-            '(280&#160;mi) by road. Kata Tjuta and Uluru are the two major '+
-            'features of the Uluru - Kata Tjuta National Park. Uluru is '+
-            'sacred to the Pitjantjatjara and Yankunytjatjara, the '+
-            'Aboriginal people of the area. It has many springs, waterholes, '+
-            'rock caves and ancient paintings. Uluru is listed as a World '+
-            'Heritage Site.</p>'+
-            '<p>Attribution: Uluru, <a href="https://www.google.com/maps/dir/' + pos.lat + ',' +
+            '<p><b>Dick&#8217s Sporting Goods</b>, is the location chosen to virtually ' +
+            'represent the first location of Ahsan&#8217s charging '+
+            'station.  It is actually the Dick&#8217s Sporting Goods in '+
+            'Kennesaw, GA. </p>'+
+            '<p>Location: Kennesaw, GA, <a href="https://www.google.com/maps/dir/' + pos.lat + ',' +
             pos.lng + '/34.0043724,+-84.5724989/">'+
-            'Directions</a> '+
-            '(last visited June 22, 2009).</p>'+
+            'Directions</a> </p>'+
             '</div>'+
             '</div>');
           infowindow.open(map, marker);
